# autobot

./: =2.0  LICENSE  README.md  clean_repo.sh  cli_example.sh  conda_env.yml  debug_test.py  memory_optimization_report.py  profile_memory_flow.py  pyproject.toml  requirements.txt  setup.py  simple_memory_profile.py  test_imports.py  test_memory_comprehensive.py  test_memory_final.py  test_memory_issue.py  test_memory_simple.py  test_torch_compile.py  test_torch_compile_integration.py
autoBOT.egg-info/: PKG-INFO  SOURCES.txt
autoBOTLib/: __init__.py  __main__.py  baselines.py  conceptnet_features.py  contextual_embeddings.py  data_utils.py  doc_similarity.py  feature_constructors.py  features_concepts.py  features_contextual.py  features_document_graph.py  features_keyword.py  features_sentence_embeddings.py  features_token_relations.py  features_topic.py  keyword_features.py  minimal_test.py  optimization_engine.py  optimization_feature_constructors.py  optimization_metrics.py  strategy_ga.py  test.pickle  topic_features.py  word_relations.py
autoBOTLib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
autoBOT_learn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
autobot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
containers/: environment.dsc  generate.sh
docfiles/: api.rst  autoBOTLib.learning.rst  autoBOTLib.misc.rst  autoBOTLib.rst  autobot.rst  cli_usage.rst  conf.py  containerization.rst  core_idea.rst  custom_classifiers.rst  custom_features.rst  custom_knowledge.rst  ideas.rst  index.rst  installation.rst  key_idea.rst  (+8 more)
(+199 files in other folders)
